--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
+    <title>Chat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
         const socket = io("http://localhost:3333/", {
             transports: ["websocket"]
@@ -28,18 +31,33 @@
         function writeMessage(user, mesage) {
             let mesagehtml = document.querySelector("#mensagens").innerHTML;
 
-            mesagehtml += `<p><strong>${user}</strong> - ${mesage}</p>`;
+            mesagehtml += `<div class="alert alert-success">
+                                <h5 class="m-0">${user}</h5>
+                                <p class="m-0">${mesage}</p>
+                            </div>`;
 
             document.querySelector("#mensagens").innerHTML = mesagehtml;
         }
     </script>
-    <title>Chat</title>
 </head>
 <body>
-    <input type="text" id="usuario" placeholder="Nome de usuário" />
-    <textarea name="Mensagem" id="mensagem" cols="30" rows="10" placeholder="Digite sua mensagem... :)"></textarea>
-    <button onclick="send()">Envie</button>
-    <h3>Conversa:</h3>
-    <div id="mensagens"></div>
+    <div class="container">
+        <h3 class="mt-5">Chat - WebSocket</h3>
+        <div class="row">
+            <div class="col-4">
+                <label for="usuario">Nome de Usuário:</label>
+                <input class="form-control" type="text" id="usuario" placeholder="Nome de usuário" />
+            </div>
+        </div>
+        <div class="card">
+            <h3>Conversa:</h3>
+            <div class="card-body" id="mensagens"></div>
+            <div class="card-footer">
+                <textarea class="form-control form-control-lg" name="Mensagem" id="mensagem" cols="30" rows="10" placeholder="Digite sua mensagem... :)"></textarea>
+                <button class="btn btn-success w-100 mt-5" onclick="send()">Envie</button>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
