--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,14 @@
     <title>Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <style>
+        #mensagens{
+            height: 350px;
+            overflow: auto;
+        }
+    </style>
+
     <script>
         const socket = io("http://localhost:3333/", {
             transports: ["websocket"]
@@ -25,36 +33,41 @@
                 user, mesage
             });
 
-            writeMessage("Eu:", mesage)
+            writeMessage("Você:", mesage)
         }
 
         function writeMessage(user, mesage) {
+
+            let bg = user === "Você:" ? "alert-success" : "alert-info text-end"
             let mesagehtml = document.querySelector("#mensagens").innerHTML;
 
-            mesagehtml += `<div class="alert alert-success">
+            mesagehtml += `<div class="alert ${bg}">
                                 <h5 class="m-0">${user}</h5>
                                 <p class="m-0">${mesage}</p>
                             </div>`;
 
             document.querySelector("#mensagens").innerHTML = mesagehtml;
+            document.querySelector("#mensagens").scrollTo(0, document.body.scrollHeight)
+            
+            document.querySelector("#mensagem").value = "";
         }
     </script>
 </head>
 <body>
     <div class="container">
-        <h3 class="mt-5">Chat - WebSocket</h3>
+        <h3 class="mt-4">Chat - WebSocket</h3>
         <div class="row">
             <div class="col-4">
                 <label for="usuario">Nome de Usuário:</label>
-                <input class="form-control" type="text" id="usuario" placeholder="Nome de usuário" />
+                <input class="form-control mb-3 mt-3" type="text" id="usuario" placeholder="Nome de usuário" />
             </div>
         </div>
+        <h3 class="m-3">Conversa:</h3>
         <div class="card">
-            <h3>Conversa:</h3>
             <div class="card-body" id="mensagens"></div>
             <div class="card-footer">
-                <textarea class="form-control form-control-lg" name="Mensagem" id="mensagem" cols="30" rows="10" placeholder="Digite sua mensagem... :)"></textarea>
-                <button class="btn btn-success w-100 mt-5" onclick="send()">Envie</button>
+                <textarea class="form-control" name="Mensagem" id="mensagem" cols="30" rows="10" placeholder="Digite sua mensagem... :)"></textarea>
+                <button class="btn btn-success w-100 mt-2" onclick="send()">Envie</button>
             </div>
         </div>
 
